# l3x

./: README.md
etc/: L3X_SAST_Report.html  L3X_SAST_Report_Rust.html  Solidity-Ethereum_L3X_SAST_Report.html  patterns-eth-solidity.md  patterns-rust.md  patterns-sol.md  patterns.md
l3x/: Cargo.toml
l3x/src/: gpt_validator.rs  main.rs  report_generator.rs  vulnerability_checks.rs
