[package]
name = "l3x"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
colored = "2.0"
walkdir = "2.3"
clap = "3.0"
itertools = "0.10.1"